--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,8 @@ importFrom(gdsfmt,index.gdsn)
 importFrom(gdsfmt,put.attr.gdsn)
 importFrom(gdsfmt,read.gdsn)
 importFrom(gdsfmt,write.gdsn)
+importFrom(stats,qbinom)
+importFrom(utils,read.csv)
+importFrom(utils,read.csv2)
+importFrom(utils,read.delim)
+importFrom(utils,write.table)
