Update prepPed1KG() function and add unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(identifyRelative)
 export(prepPed1KG)
 export(pruning1KG.Chr)
 importFrom(GENESIS,pcairPartition)
+importFrom(S4Vectors,isSingleInteger)
 importFrom(SNPRelate,snpgdsIBDKING)
 importFrom(SNPRelate,snpgdsLDpruning)
 importFrom(SNPRelate,snpgdsOpen)
