Update code documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,13 +25,16 @@ importFrom(gdsfmt,createfn.gds)
 importFrom(gdsfmt,delete.gdsn)
 importFrom(gdsfmt,index.gdsn)
 importFrom(gdsfmt,ls.gdsn)
+importFrom(gdsfmt,objdesp.gdsn)
 importFrom(gdsfmt,openfn.gds)
 importFrom(gdsfmt,put.attr.gdsn)
 importFrom(gdsfmt,read.gdsn)
+importFrom(gdsfmt,readmode.gdsn)
 importFrom(gdsfmt,sync.gds)
 importFrom(gdsfmt,write.gdsn)
 importFrom(stats,qbinom)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,read.delim)
+importFrom(utils,write.csv2)
 importFrom(utils,write.table)
