--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(gdsfmt,read.gdsn)
 importFrom(gdsfmt,readmode.gdsn)
 importFrom(gdsfmt,sync.gds)
 importFrom(gdsfmt,write.gdsn)
+importFrom(methods,is)
 importFrom(stats,qbinom)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
