Update code documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,14 @@ export(add1KG2SampleGDS)
 export(addPhase1KG2SampleGDSFromFile)
 export(addRef2GDS1KG)
 export(appendStudy2GDS1KG)
+export(basePCASample)
 export(generateGDS1KG)
 export(generateMapSnvSel)
 export(generatePhase1KG2GDS)
 export(groupChr1KGSNV)
 export(identifyRelative)
 export(prepPed1KG)
+export(projectSample2PCA)
 export(pruning1KG.Chr)
 export(pruningSample)
 importFrom(GENESIS,pcairPartition)
@@ -18,6 +20,9 @@ importFrom(S4Vectors,isSingleNumber)
 importFrom(SNPRelate,snpgdsIBDKING)
 importFrom(SNPRelate,snpgdsLDpruning)
 importFrom(SNPRelate,snpgdsOpen)
+importFrom(SNPRelate,snpgdsPCA)
+importFrom(SNPRelate,snpgdsPCASNPLoading)
+importFrom(SNPRelate,snpgdsPCASampLoading)
 importFrom(gdsfmt,add.gdsn)
 importFrom(gdsfmt,append.gdsn)
 importFrom(gdsfmt,closefn.gds)
