--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(prepPed1KG)
 export(projectSample2PCA)
 export(pruning1KG.Chr)
 export(pruningSample)
+export(snvListVCF)
 importFrom(GENESIS,pcairPartition)
 importFrom(S4Vectors,isSingleInteger)
 importFrom(S4Vectors,isSingleNumber)
