--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add1KG2SampleGDS)
 export(addPhase1KG2SampleGDSFromFile)
+export(addPhase1KG2SampleGDSFromGDS)
 export(addRef2GDS1KG)
 export(appendStudy2GDS1KG)
 export(basePCASample)
