Add function addGDS1KGLDBlock

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(SNPRelate,snpgdsPCASampLoading)
 importFrom(gdsfmt,add.gdsn)
 importFrom(gdsfmt,append.gdsn)
 importFrom(gdsfmt,closefn.gds)
+importFrom(gdsfmt,compression.gdsn)
 importFrom(gdsfmt,createfn.gds)
 importFrom(gdsfmt,delete.gdsn)
 importFrom(gdsfmt,index.gdsn)
