Add the functions for PCA in processStudy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(addPhase1KG2SampleGDSFromGDS)
 export(addRef2GDS1KG)
 export(appendStudy2GDS1KG)
 export(basePCASample)
+export(computeAllelicFraction)
+export(computePrunedPCARef)
 export(generateGDS1KG)
 export(generateMapSnvSel)
 export(generatePhase1KG2GDS)
