Add function computePCAForSamples and add validation in addStudyGDSSample check the ped

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(addRef2GDS1KG)
 export(appendStudy2GDS1KG)
 export(basePCASample)
 export(computeAllelicFraction)
+export(computePCAForSamples)
 export(computePrunedPCARef)
 export(generateGDS1KG)
 export(generateMapSnvSel)
