First push of allelicFraction.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,18 +7,25 @@ export(addPhase1KG2SampleGDSFromGDS)
 export(addRef2GDS1KG)
 export(appendStudy2GDS1KG)
 export(basePCASample)
+export(computeAlleleFraction)
 export(computeAllelicFraction)
+export(computeAllelicFractionDNA)
+export(computeAllelicImbDNAChr)
+export(computeLOHBlocksDNAChr)
 export(computePCAForSamples)
 export(computePrunedPCARef)
 export(generateGDS1KG)
 export(generateMapSnvSel)
 export(generatePhase1KG2GDS)
+export(getTableSNV)
 export(groupChr1KGSNV)
 export(identifyRelative)
 export(prepPed1KG)
 export(projectSample2PCA)
 export(pruningSample)
 export(snvListVCF)
+export(testAlleleFractionChange)
+export(testEmptyBox)
 importFrom(GENESIS,pcairPartition)
 importFrom(S4Vectors,isSingleInteger)
 importFrom(S4Vectors,isSingleNumber)
@@ -28,6 +35,7 @@ importFrom(SNPRelate,snpgdsOpen)
 importFrom(SNPRelate,snpgdsPCA)
 importFrom(SNPRelate,snpgdsPCASNPLoading)
 importFrom(SNPRelate,snpgdsPCASampLoading)
+importFrom(gdsfmt,"read.gdsn,")
 importFrom(gdsfmt,add.gdsn)
 importFrom(gdsfmt,append.gdsn)
 importFrom(gdsfmt,closefn.gds)
