Updating documentation and importFrom to remove warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,9 @@ importFrom(gdsfmt,readmode.gdsn)
 importFrom(gdsfmt,sync.gds)
 importFrom(gdsfmt,write.gdsn)
 importFrom(methods,is)
+importFrom(stats,dbinom)
+importFrom(stats,median)
+importFrom(stats,pbinom)
 importFrom(stats,qbinom)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
