--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,20 +23,20 @@ NeedsCompilation: no
 VignetteBuilder: knitr
 Depends: R (>= 4.0),
     gdsfmt,
-    EnsDb.Hsapiens.v86,
-    AnnotationDbi,
-    ensembldb,
     SNPRelate,
     stats,
     utils,
     GENESIS
 Imports: S4Vectors,
-    methods,
-    GenomicRanges
+    ensembldb,
+    EnsDb.Hsapiens.v86,
+    AnnotationDbi,
+    methods
 Suggests: testthat,
     knitr,
     rmarkdown,
     BiocStyle,
-    withr
+    withr,
+    GenomicRanges
 biocViews: Genetics, Software, Sequencing, WholeGenome
 RoxygenNote: 7.1.2
