Modify GDS structure suite3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,12 @@ export(addRef2GDS1KG)
 export(appendStudy2GDS1KG)
 export(basePCASample)
 export(computeAlleleFraction)
-export(computeAllelicFraction)
 export(computeAllelicFractionDNA)
 export(computeAllelicImbDNAChr)
 export(computeLOHBlocksDNAChr)
 export(computePCAForSamples)
 export(computePrunedPCARef)
+export(estimateAllelicFraction)
 export(generateGDS1KG)
 export(generateMapSnvSel)
 export(generatePhase1KG2GDS)
