Add synthetic generator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,11 @@ export(getTableSNV)
 export(groupChr1KGSNV)
 export(identifyRelative)
 export(prepPed1KG)
+export(prepSynthetic)
 export(projectSample2PCA)
 export(pruningSample)
 export(snvListVCF)
+export(syntheticGeno)
 export(testAlleleFractionChange)
 export(testEmptyBox)
 importFrom(GENESIS,pcairPartition)
