Update synthetic generator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(prepPed1KG)
 export(prepSynthetic)
 export(projectSample2PCA)
 export(pruningSample)
+export(select1KGPop)
 export(snvListVCF)
 export(syntheticGeno)
 export(testAlleleFractionChange)
