Add omputePCAsynthetic and computeKNNSuperPoprSynthetic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(basePCASample)
 export(computeAlleleFraction)
 export(computeAllelicFractionDNA)
 export(computeAllelicImbDNAChr)
+export(computeKNNSuperPoprSynthetic)
 export(computeLOHBlocksDNAChr)
 export(computePCAForSamples)
+export(computePCAsynthetic)
 export(computePrunedPCARef)
 export(estimateAllelicFraction)
 export(generateGDS1KG)
@@ -38,6 +40,7 @@ importFrom(SNPRelate,snpgdsOpen)
 importFrom(SNPRelate,snpgdsPCA)
 importFrom(SNPRelate,snpgdsPCASNPLoading)
 importFrom(SNPRelate,snpgdsPCASampLoading)
+importFrom(class,knn)
 importFrom(gdsfmt,add.gdsn)
 importFrom(gdsfmt,append.gdsn)
 importFrom(gdsfmt,closefn.gds)
