--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports: S4Vectors,
     ensembldb,
     EnsDb.Hsapiens.v86,
     AnnotationDbi,
-    methods
+    methods,
+    class
 Suggests: testthat,
     knitr,
     rmarkdown,
