Update documentation: add missing imports and parameters.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(stats,dbinom)
 importFrom(stats,median)
 importFrom(stats,pbinom)
 importFrom(stats,qbinom)
+importFrom(stats,rmultinom)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,read.delim)
