--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Authors@R: c(person("Pascal", "Belleau", email="pascal_belleau@hotmail.com",
     role=c("aut"), comment = c(ORCID = "0000-0001-7846-6749")),
     person("Alexander", "Krasnitz", email="krasnitz@cshl.edu",
     role=c("aut")))
-License: Artistic-2.0
+License: Apache License (== 2.0)
 Encoding: UTF-8
 NeedsCompilation: no
 VignetteBuilder: knitr
