--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(computeLOHBlocksDNAChr)
 export(computePCAForSamples)
 export(computePCAsynthetic)
 export(computePrunedPCARef)
+export(computeSyntheticConfMat)
+export(computeSyntheticROC)
 export(estimateAllelicFraction)
 export(generateGDS1KG)
 export(generateMapSnvSel)
@@ -23,6 +25,7 @@ export(getTableSNV)
 export(groupChr1KGSNV)
 export(identifyRelative)
 export(prepPed1KG)
+export(prepPedSynthetic1KG)
 export(prepSynthetic)
 export(projectSample2PCA)
 export(pruningSample)
@@ -57,6 +60,8 @@ importFrom(gdsfmt,readmode.gdsn)
 importFrom(gdsfmt,sync.gds)
 importFrom(gdsfmt,write.gdsn)
 importFrom(methods,is)
+importFrom(pROC,multiclass.roc)
+importFrom(pROC,roc)
 importFrom(stats,dbinom)
 importFrom(stats,median)
 importFrom(stats,pbinom)
