Add the function for parameters selection selParaPCAUpQuartile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(prepPedSynthetic1KG)
 export(prepSynthetic)
 export(projectSample2PCA)
 export(pruningSample)
+export(selParaPCAUpQuartile)
 export(select1KGPop)
 export(snvListVCF)
 export(syntheticGeno)
@@ -63,9 +64,11 @@ importFrom(methods,is)
 importFrom(pROC,multiclass.roc)
 importFrom(pROC,roc)
 importFrom(stats,dbinom)
+importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,pbinom)
 importFrom(stats,qbinom)
+importFrom(stats,quantile)
 importFrom(stats,rmultinom)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
