Add function for PCA multi

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,14 @@ export(basePCASample)
 export(computeAlleleFraction)
 export(computeAllelicFractionDNA)
 export(computeAllelicImbDNAChr)
+export(computeKNNRefSynthetic)
+export(computeKNNSuperPopSample)
 export(computeKNNSuperPoprSynthetic)
 export(computeLOHBlocksDNAChr)
 export(computePCAForSamples)
+export(computePCAMultiSynthetic)
+export(computePCARefRMMulti)
+export(computePCARefSample)
 export(computePCAsynthetic)
 export(computePrunedPCARef)
 export(computeSyntheticConfMat)
@@ -21,6 +26,7 @@ export(estimateAllelicFraction)
 export(generateGDS1KG)
 export(generateMapSnvSel)
 export(generatePhase1KG2GDS)
+export(getRef1KGPop)
 export(getTableSNV)
 export(groupChr1KGSNV)
 export(identifyRelative)
