Add functions for pool PCA synthetic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(pruningSample)
 export(selParaPCAUpQuartile)
 export(select1KGPop)
 export(snvListVCF)
+export(splitSelectByPop)
 export(syntheticGeno)
 export(testAlleleFractionChange)
 export(testEmptyBox)
