--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,18 +10,17 @@ export(basePCASample)
 export(computeAlleleFraction)
 export(computeAllelicFractionDNA)
 export(computeAllelicImbDNAChr)
+export(computeKNNRefSample)
 export(computeKNNRefSynthetic)
-export(computeKNNSuperPopSample)
-export(computeKNNSuperPoprSynthetic)
 export(computeLOHBlocksDNAChr)
-export(computePCAForSamples)
 export(computePCAMultiSynthetic)
 export(computePCARefRMMulti)
 export(computePCARefSample)
-export(computePCAsynthetic)
+export(computePoolSyntheticAncestry)
 export(computePrunedPCARef)
 export(computeSyntheticConfMat)
 export(computeSyntheticROC)
+export(createStudy2GDS1KG)
 export(estimateAllelicFraction)
 export(generateGDS1KG)
 export(generateMapSnvSel)
