Cleanup processStudy part2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(computePCAMultiSynthetic)
 export(computePCARefRMMulti)
 export(computePCARefSample)
 export(computePoolSyntheticAncestry)
+export(computePoolSyntheticAncestryGr)
 export(computePrunedPCARef)
 export(computeSyntheticConfMat)
 export(computeSyntheticROC)
