Add fct computeAncestryFromSyntheticFile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(basePCASample)
 export(computeAlleleFraction)
 export(computeAllelicFractionDNA)
 export(computeAllelicImbDNAChr)
+export(computeAncestryFromSyntheticFile)
 export(computeKNNRefSample)
 export(computeKNNRefSynthetic)
 export(computeLOHBlocksDNAChr)
