Adding tests for addStudy1Kg() and computePCARefSample() functions; update documentation of functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(addBlockFromPlink2GDS)
 export(addPhase1KG2SampleGDSFromFile)
 export(addPhase1KG2SampleGDSFromGDS)
 export(addRef2GDS1KG)
+export(addStudy1Kg)
 export(appendStudy2GDS1KG)
 export(basePCASample)
 export(computeAlleleFraction)
