Preparation for allelicFraction of RNA data add function generateGeneBlock

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,11 @@ export(splitSelectByPop)
 export(syntheticGeno)
 export(testAlleleFractionChange)
 export(testEmptyBox)
+importFrom(AnnotationDbi,select)
+importFrom(EnsDb.Hsapiens.v86,EnsDb.Hsapiens.v86)
 importFrom(GENESIS,pcairPartition)
+importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,reduce)
 importFrom(S4Vectors,isSingleNumber)
 importFrom(SNPRelate,snpgdsIBDKING)
 importFrom(SNPRelate,snpgdsLDpruning)
@@ -53,6 +57,8 @@ importFrom(SNPRelate,snpgdsPCA)
 importFrom(SNPRelate,snpgdsPCASNPLoading)
 importFrom(SNPRelate,snpgdsPCASampLoading)
 importFrom(class,knn)
+importFrom(ensembldb,exonsBy)
+importFrom(ensembldb,toSAF)
 importFrom(gdsfmt,add.gdsn)
 importFrom(gdsfmt,append.gdsn)
 importFrom(gdsfmt,closefn.gds)
