--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Depends: R (>= 4.0),
     utils,
     GENESIS
 Imports: S4Vectors,
+    GenomicRanges,
     ensembldb,
     EnsDb.Hsapiens.v86,
     AnnotationDbi,
