Solved dependency issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,10 +45,11 @@ export(syntheticGeno)
 export(testAlleleFractionChange)
 export(testEmptyBox)
 importFrom(AnnotationDbi,select)
-importFrom(EnsDb.Hsapiens.v86,EnsDb.Hsapiens.v86)
+importFrom(BSgenome,strand)
 importFrom(GENESIS,pcairPartition)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,reduce)
+importFrom(S4Vectors,Rle)
 importFrom(S4Vectors,isSingleNumber)
 importFrom(SNPRelate,snpgdsIBDKING)
 importFrom(SNPRelate,snpgdsLDpruning)
@@ -58,6 +59,7 @@ importFrom(SNPRelate,snpgdsPCASNPLoading)
 importFrom(SNPRelate,snpgdsPCASampLoading)
 importFrom(class,knn)
 importFrom(ensembldb,exonsBy)
+importFrom(ensembldb,genes)
 importFrom(ensembldb,toSAF)
 importFrom(gdsfmt,add.gdsn)
 importFrom(gdsfmt,append.gdsn)
