--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,10 +45,12 @@ export(syntheticGeno)
 export(testAlleleFractionChange)
 export(testEmptyBox)
 importFrom(AnnotationDbi,select)
+importFrom(AnnotationFilter,GeneIdFilter)
 importFrom(BSgenome,strand)
 importFrom(GENESIS,pcairPartition)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,reduce)
+importFrom(IRanges,IRanges)
 importFrom(S4Vectors,Rle)
 importFrom(S4Vectors,isSingleNumber)
 importFrom(SNPRelate,snpgdsIBDKING)
