Add function for allelic fraction for RNA-seq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(appendStudy2GDS1KG)
 export(basePCASample)
 export(computeAlleleFraction)
 export(computeAllelicFractionDNA)
+export(computeAllelicFractionRNA)
 export(computeAllelicImbDNAChr)
 export(computeAncestryFromSyntheticFile)
 export(computeKNNRefSample)
@@ -53,6 +54,7 @@ importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,reduce)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,Rle)
+importFrom(S4Vectors,aggregate)
 importFrom(S4Vectors,isSingleNumber)
 importFrom(SNPRelate,snpgdsIBDKING)
 importFrom(SNPRelate,snpgdsLDpruning)
