Update addStudy1Kg() and estimateAllelicFration() documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Suggests: testthat,
     knitr,
     rmarkdown,
     BiocStyle,
-    withr
+    withr,
+    BSgenome.Hsapiens.UCSC.hg38
 BugReports: https://github.com/KrasnitzLab/RAIDS/issues
 URL: https://krasnitzlab.github.io/RAIDS/
 biocViews: Genetics, Software, Sequencing, WholeGenome
