--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: RAIDS
 Type: Package
-Title: Accurate Inference of Genetic Ancestry from Cancer Sequencing
+Title: Accurate Inference of Genetic Ancestry from Cancer Sequences
 Description: This package implements specialized algorithms that enable
-    genetic ancestry inference from various cancer sequencing sources (RNA,
-    Exome and Whole-Genome sequencing). This package also implements a
+    genetic ancestry inference from various cancer sequences sources (RNA,
+    Exome and Whole-Genome sequences). This package also implements a
     simulation algorithm that generates synthetic cancer-derived data. 
     This code and analysis pipeline was designed and developed for the
-    following publication: Belleau, P et al. Accurate and robust inference of 
-    genetic ancestry from cancer-derived molecular data across 
-    genomic platforms. bioRxiv 2022.02.01.478737.
+    following publication: Belleau, P et al. Genetic Ancestry Inference from 
+    Cancer-Derived Molecular Data across Genomic and Transcriptomic 
+    Platforms. Cancer Res 1 January 2023; 83 (1): 49–58.
 Version: 0.50.1
 Authors@R: c(person("Pascal", "Belleau", email="pascal_belleau@hotmail.com",
     role=c("cre", "aut"), comment = c(ORCID = "0000-0002-0802-1071")),
