--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(prepPed1KG)
 export(prepSynthetic)
 export(projectSample2PCA)
 export(pruningSample)
+export(runExomeAncestry)
 export(select1KGPop)
 export(snvListVCF)
 export(splitSelectByPop)
