--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,5 +83,6 @@ importFrom(stats,rmultinom)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,read.delim)
+importFrom(utils,write.csv)
 importFrom(utils,write.csv2)
 importFrom(utils,write.table)
