Add entries in Biocview field

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,5 +44,6 @@ Suggests: testthat,
     BSgenome.Hsapiens.UCSC.hg38
 BugReports: https://github.com/KrasnitzLab/RAIDS/issues
 URL: https://krasnitzlab.github.io/RAIDS/
-biocViews: Genetics, Software, Sequencing, WholeGenome
+biocViews: Genetics, Software, Sequencing, WholeGenome, PrincipalComponent, 
+    GeneticVariability
 RoxygenNote: 7.2.3
