Add DimensionReduction to biocViews

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,5 +45,5 @@ Suggests: testthat,
 BugReports: https://github.com/KrasnitzLab/RAIDS/issues
 URL: https://krasnitzlab.github.io/RAIDS/
 biocViews: Genetics, Software, Sequencing, WholeGenome, PrincipalComponent, 
-    GeneticVariability
+    GeneticVariability, DimensionReduction
 RoxygenNote: 7.2.3
