--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ importFrom(gdsfmt,write.gdsn)
 importFrom(methods,is)
 importFrom(pROC,multiclass.roc)
 importFrom(pROC,roc)
+importFrom(rlang,arg_match)
 importFrom(stats,dbinom)
 importFrom(stats,mad)
 importFrom(stats,median)
