Change variable name in computeAncestryFromSyntheticFile() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(IRanges,IRanges)
 importFrom(S4Vectors,Rle)
 importFrom(S4Vectors,aggregate)
 importFrom(S4Vectors,isSingleNumber)
+importFrom(S4Vectors,isSingleString)
 importFrom(SNPRelate,snpgdsIBDKING)
 importFrom(SNPRelate,snpgdsLDpruning)
 importFrom(SNPRelate,snpgdsOpen)
