Add wrapper runWrapperAncestry and runProfileAncestry. Change snp.pos for snpPos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(prepSynthetic)
 export(projectSample2PCA)
 export(pruningSample)
 export(runExomeAncestry)
+export(runRNAAncestry)
 export(select1KGPop)
 export(snvListVCF)
 export(splitSelectByPop)
