--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,3 +87,4 @@ importFrom(utils,read.csv2)
 importFrom(utils,read.delim)
 importFrom(utils,write.csv)
 importFrom(utils,write.csv2)
+importFrom(utils,write.table)
