Add function readSNVVCF

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,9 @@ Imports: S4Vectors,
     pROC,
     IRanges,
     AnnotationFilter,
-    rlang
+    rlang,
+    VariantAnnotation,
+    MatrixGenerics,
 Suggests: testthat,
     knitr,
     rmarkdown,
