--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,11 @@ importFrom(BSgenome,strand)
 importFrom(GENESIS,pcairPartition)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,reduce)
+importFrom(GenomicRanges,seqnames)
+importFrom(GenomicRanges,start)
+importFrom(GenomicRanges,width)
 importFrom(IRanges,IRanges)
+importFrom(MatrixGenerics,rowRanges)
 importFrom(S4Vectors,Rle)
 importFrom(S4Vectors,aggregate)
 importFrom(S4Vectors,isSingleNumber)
@@ -45,6 +49,8 @@ importFrom(SNPRelate,snpgdsOpen)
 importFrom(SNPRelate,snpgdsPCA)
 importFrom(SNPRelate,snpgdsPCASNPLoading)
 importFrom(SNPRelate,snpgdsPCASampLoading)
+importFrom(VariantAnnotation,geno)
+importFrom(VariantAnnotation,readVcf)
 importFrom(class,knn)
 importFrom(ensembldb,exonsBy)
 importFrom(ensembldb,genes)
