--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,6 @@ Suggests: testthat,
 BugReports: https://github.com/KrasnitzLab/RAIDS/issues
 URL: https://krasnitzlab.github.io/RAIDS/
 biocViews: Genetics, Software, Sequencing, WholeGenome, PrincipalComponent, 
-    GeneticVariability, DimensionReduction
+    GeneticVariability, DimensionReduction, BiocViews
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
