--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,9 @@ Authors@R: c(person("Pascal", "Belleau", email="pascal_belleau@hotmail.com",
     role=c("cre", "aut"), comment = c(ORCID = "0000-0002-0802-1071")),
     person("Astrid", "Deschênes", email="adeschen@hotmail.com",
     role=c("aut"), comment = c(ORCID = "0000-0001-7846-6749")),
+    person(given="David A.", family="Tuveson",
+    email="dtuveson@cshl.edu", 
+    role=c("aut"), comment=c(ORCID="0000-0002-8017-2712")),
     person("Alexander", "Krasnitz", email="krasnitz@cshl.edu",
     role=c("aut")))
 License: Apache License (>= 2)
