--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,6 @@ Suggests: testthat,
 BugReports: https://github.com/KrasnitzLab/RAIDS/issues
 URL: https://krasnitzlab.github.io/RAIDS/
 biocViews: Genetics, Software, Sequencing, WholeGenome, PrincipalComponent, 
-    GeneticVariability, DimensionReduction, BiocViews
+    GeneticVariability, DimensionReduction
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
