--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(computePCAMultiSynthetic)
 export(computePCARefSample)
 export(computePoolSyntheticAncestryGr)
 export(computeSyntheticROC)
+export(createAccuracyGraph)
 export(createStudy2GDS1KG)
 export(estimateAllelicFraction)
 export(generateGDS1KG)
@@ -70,9 +71,23 @@ importFrom(gdsfmt,read.gdsn)
 importFrom(gdsfmt,readmode.gdsn)
 importFrom(gdsfmt,sync.gds)
 importFrom(gdsfmt,write.gdsn)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(methods,is)
 importFrom(pROC,multiclass.roc)
 importFrom(pROC,roc)
+importFrom(rlang,.data)
 importFrom(rlang,arg_match)
 importFrom(stats,dbinom)
 importFrom(stats,mad)
@@ -81,6 +96,7 @@ importFrom(stats,pbinom)
 importFrom(stats,qbinom)
 importFrom(stats,quantile)
 importFrom(stats,rmultinom)
+importFrom(stringr,str_detect)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,read.delim)
