add function select1KGPopForSynthetic in synthetic.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(pruningSample)
 export(runExomeAncestry)
 export(runRNAAncestry)
 export(select1KGPop)
+export(select1KGPopForSynthetic)
 export(snvListVCF)
 export(splitSelectByPop)
 export(syntheticGeno)
