Add functions runDNAAncestryProfile and runRNAAncestryProfile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,8 +23,10 @@ export(identifyRelative)
 export(prepPed1KG)
 export(prepSynthetic)
 export(pruningSample)
+export(runDNAAncestryProfile)
 export(runExomeAncestry)
 export(runRNAAncestry)
+export(runRNAAncestryProfile)
 export(select1KGPop)
 export(select1KGPopForSynthetic)
 export(snvListVCF)
