--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,13 +20,13 @@ export(generatePhase1KG2GDS)
 export(getRef1KGPop)
 export(groupChr1KGSNV)
 export(identifyRelative)
+export(inferAncestry)
+export(inferAncestryGeneAware)
 export(prepPed1KG)
 export(prepSynthetic)
 export(pruningSample)
-export(runDNAAncestryProfile)
 export(runExomeAncestry)
 export(runRNAAncestry)
-export(runRNAAncestryProfile)
 export(select1KGPop)
 export(select1KGPopForSynthetic)
 export(snvListVCF)
