--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add1KG2SampleGDS)
 export(addGeneBlockGDSRefAnnot)
 export(addRef2GDS1KG)
 export(addStudy1Kg)
+export(computeAncestryFromSynthetic)
 export(computeAncestryFromSyntheticFile)
 export(computeKNNRefSample)
 export(computeKNNRefSynthetic)
