Add function createAUROCGraph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(computePCAMultiSynthetic)
 export(computePCARefSample)
 export(computePoolSyntheticAncestryGr)
 export(computeSyntheticROC)
+export(createAUROCGraph)
 export(createAccuracyGraph)
 export(createStudy2GDS1KG)
 export(estimateAllelicFraction)
