Add the function getRefSuperPop

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(generateGDS1KG)
 export(generateMapSnvSel)
 export(generatePhase1KG2GDS)
 export(getRef1KGPop)
+export(getRefSuperPop)
 export(groupChr1KGSNV)
 export(identifyRelative)
 export(inferAncestry)
