Add the function identifyRelativeRef wrapper of identifyRelative

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(getRef1KGPop)
 export(getRefSuperPop)
 export(groupChr1KGSNV)
 export(identifyRelative)
+export(identifyRelativeRef)
 export(inferAncestry)
 export(inferAncestryGeneAware)
 export(prepPed1KG)
