Update generatePhase1KG2GDS and add wrapper generatePhaseRef

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(estimateAllelicFraction)
 export(generateGDS1KG)
 export(generateMapSnvSel)
 export(generatePhase1KG2GDS)
+export(generatePhaseRef)
 export(getRef1KGPop)
 export(getRefSuperPop)
 export(groupChr1KGSNV)
