--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,9 @@ importFrom(SNPRelate,snpgdsPCASampLoading)
 importFrom(VariantAnnotation,geno)
 importFrom(VariantAnnotation,readVcf)
 importFrom(class,knn)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,group_by)
+importFrom(dplyr,summarize)
 importFrom(ensembldb,exonsBy)
 importFrom(ensembldb,genes)
 importFrom(ensembldb,toSAF)
