--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,10 @@ importFrom(GenomicRanges,start)
 importFrom(GenomicRanges,width)
 importFrom(IRanges,IRanges)
 importFrom(MatrixGenerics,rowRanges)
+importFrom(Rsamtools,BamFile)
+importFrom(Rsamtools,PileupParam)
+importFrom(Rsamtools,ScanBamParam)
+importFrom(Rsamtools,pileup)
 importFrom(S4Vectors,Rle)
 importFrom(S4Vectors,aggregate)
 importFrom(S4Vectors,isSingleNumber)
