--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -28,4 +28,6 @@ jobs:
 
       - name: Test coverage
         run: covr::codecov(quiet = FALSE)
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         shell: Rscript {0}
