--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -27,5 +27,12 @@ jobs:
           needs: coverage
 
       - name: Test coverage
-        run: covr::codecov(quiet = FALSE)
+        run: covr::codecov(quiet = FALSE, token=${{ secrets.CODECOV_TOKEN }})
         shell: Rscript {0}
+
+      - uses: codecov/codecov-action@v5
+        with:
+          fail_ci_if_error: true 
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
